syntax = "proto2";

package catfeeder.api;

option java_package = "com.jonkimbel.catfeeder.proto";

message EmbeddedRequest {

}

message EmbeddedResponse {

}
